terraform/k8s-dashboard/resources/dashboard-gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: dashboard-gateway
  namespace: kubernetes-dashboard
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
    - dashboard.${INGRESS_DOMAIN}
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  hosts:
  - dashboard.${INGRESS_DOMAIN}
  gateways:
  - dashboard-gateway
  http:
  tls:
  - match:
    - port: 443
      sniHosts:
      - dashboard.${INGRESS_DOMAIN}
    route:
    - destination:
        host: kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local
        port:
          number: 443
